--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,7 +1,11 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-}
+  text-align: center;
 
+}
+*{
+  outline: 2px solid red;
+}
 img {
   width: 100px;
   height: 100px;
@@ -11,6 +15,20 @@ img {
   font-size: 36px;
   font-weight: 900;
 }
+
+.icons {
+display: flex;
+align-items: center;
+justify-content: center;
+justify-content: space-evenly;
+}
+.info{
+
+  max-width: 200px;
+
+}
+
+
 
 /* do not edit this footer */
 .footer {
